deployments/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: h2o
  labels:
    app.kubernetes.io/name: h2o-gps-platform
